--- a/index.html
+++ b/index.html
@@ -1,24 +1,3 @@
-<?php
-  $emailEnviar = "marcosmss1304@gmail.com";
-  $nome = $_POST['nome'];
-  $telefone = $_POST['telefone'];
-  $email = $_POST['email'];
-  $mensagem = $_POST['mensagem'];
-
-  if($_POST['enviar']) (
-    mail("$emailEnviar", "$mensagem", "
-    
-    Este é um contato enviado pelo site por $nome com as seguintes informações:
-
-    Nome: "$nome"
-    Telefone: "$telefone"
-    Email: "$email"
-    --
-    Mensagem: "$mensagem"
-
-    ";)
-  )
-?>
 
 <!DOCTYPE html>
 <html lang="pt-br">
@@ -134,7 +113,7 @@
             </div>
 
             <div class="col-md-7 ml-auto">
-                <form name="FrmContato" method="POST" action="">
+                <form name="FrmContato" method="POST" action="./form.php">
                   <div class="form-group">
                     <label for="nome">Nome</label>
                     <input type="text" class="form-control" id="nome" placeholder="Seu nome">
