--- a/index.html
+++ b/index.html
@@ -80,10 +80,6 @@
                 <i class="fab fa-js-square"></i> JavaScript,
                 <i class="fab fa-bootstrap"></i> Bootstrap,
                 <i class="fab fa-react"></i> ReactJS e eventuais plugins.</p>
-                <div>
-                  <h4>Projetos já desenvolvidos:</h4>
-                  <p><a href="https://github.com/mmss1304" target="_blank">GitHub</p></a>
-                </div>
             </div>
 
             <!-- foto -->
@@ -91,7 +87,11 @@
               <img src="img/minha1.png" class="rounded-circle img-my">
             </div>
 
-
+            <div class="col-md-12">
+              <h4>Projetos já desenvolvidos:</h4>
+              <p><a href="https://github.com/mmss1304" target="_blank">GitHub</p></a>
+            </div>
+              
             
             <div class="col-md-12 teste">
               <h4>Contatos:</h4>
