--- a/index.html
+++ b/index.html
@@ -93,19 +93,19 @@
               <div class="container-fluid p-0">
                 <div class="row no-gutters">
                   <div class="col-lg-4 col-sm-6 space">
-                      <a href="http://prfserralheria.com/">
+                      <a href="http://prfserralheria.com/" target="_blank">
                         <img class="img-fluid" src="img/portfolio1.png" alt="">
                         <figcaption class="legenda">PRF Serralheria</figcaption>
                       </a>
                   </div>
                   <div class="col-lg-4 col-sm-6 space">
-                    <a href="https://estudo-react-expensify.herokuapp.com/">
+                    <a href="https://estudo-react-expensify.herokuapp.com/" target="_blank">
                       <img class="img-fluid" src="img/portfolio2.png" alt="">
                       <figcaption class="legenda">Expensify App</figcaption>
                     </a>
                   </div>
                   <div class="col-lg-4 col-sm-6 space">
-                    <a href="https://mmss1304.github.io/meu-portfolio/">
+                    <a href="https://mmss1304.github.io/meu-portfolio/" target="_blank">
                       <img class="img-fluid" src="img/portfolio3.png" alt="">
                       <figcaption class="legenda">Meu Site</figcaption>
                     </a>
