--- a/index.html
+++ b/index.html
@@ -40,8 +40,8 @@
         <div class="collapse navbar-collapse" id="barra-navegacao">
 
           <ul class="nav navbar-nav ml-auto">
-            <li><a class="nav-link texto" href="#inicio">Início</a></li>
-            <li><a class="nav-link texto" href="#conteudo">Sobre</a></li>
+            <li><a class="nav-link texto pad" href="#inicio">Início</a></li>
+            <li><a class="nav-link texto pad" href="#conteudo">Sobre</a></li>
           </ul>
 
         </div>
