fix: Alteration img and add job experience

--- a/index.html
+++ b/index.html
@@ -106,11 +106,16 @@
               <i class="fab fa-bootstrap"></i> Bootstrap,
               <i class="fab fa-react"></i> ReactJS e eventuais plugins.
             </p>
+            <div>
+              <h4>Experiência Profissional</h4>
+              <h6>SysMap Solutions - Analista Desenvolvedor</h6>
+              <p>Início: 08/2019 - O momento.</p>
+            </div>
           </div>
 
           <!-- foto -->
           <div class="col-md-4 img-myn">
-            <img src="img/minha1.png" class="rounded-circle img-my" />
+            <img src="img/photo.jpeg" class="rounded-circle img-my" />
           </div>
 
           <div class="col-md-12">
