fix: add hability redux

--- a/index.html
+++ b/index.html
@@ -104,7 +104,9 @@
               <i class="fab fa-css3-alt"></i> CSS3,
               <i class="fab fa-js-square"></i> JavaScript,
               <i class="fab fa-bootstrap"></i> Bootstrap,
-              <i class="fab fa-react"></i> ReactJS e eventuais plugins.
+              <i class="fab fa-react"></i> ReactJS,
+              <img src="./img/redux.ico" alt="redux" style="width:17px;" />
+              Redux e eventuais plugins.
             </p>
             <div>
               <h4>Experiência Profissional</h4>
