--- a/index.html
+++ b/index.html
@@ -109,7 +109,7 @@
               Redux e eventuais plugins.
             </p>
             <div>
-              <h4>Experiência Profissional</h4>
+              <h4>Experiência Profissional:</h4>
               <h6>SysMap Solutions - Analista Desenvolvedor</h6>
               <p>Início: 08/2019 - O momento.</p>
             </div>
