fix: url project github

--- a/index.html
+++ b/index.html
@@ -142,7 +142,7 @@
                 </div>
                 <div class="col-lg-4 col-sm-6 space">
                   <a
-                    href="https://mmss1304.github.io/meu-portfolio/"
+                    href="https://github.com/mmss1304/meu-portfolio"
                     target="_blank"
                   >
                     <img class="img-fluid" src="img/portfolio3.png" alt="" />
